feat(3.11.0): 取消天气通知